disbursed cards alignment, badge color, repayment button issues fixed

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,13 @@ border-radius: 5px;
 box-shadow: 0 10px 25px 0 rgba(6, 12, 34, 0.1);
 }
 
+.dis-cards{
+  border: none;
+border-radius: 5px;
+box-shadow: 0 10px 25px 0 rgba(6, 12, 34, 0.1);
+
+}
+
 .new-app-card{
   display: inline-block;
 }
@@ -60,16 +67,28 @@ border: 1px solid transparent;
   height: 50px;
   width: 200px;
   font-size: 12px;
-
-  
-   
-  
-
   
 }
 
-.eff-4{
-  width:140px;
+th{
+  font-size: 13px;
+}
+
+td{
+  font-size: 15px;
+}
+
+.dis-badge{
+  font-size: 10px;
+ padding: 10px;
+  height: 30px;
+  width: 100px;
+  background-color: #ccf6ec;
+  color: #00a882;
+}
+
+/* .eff-4{
+  width:100%;
   height:50px;
   left:-140px;
   background:#0a0a0a;
@@ -82,6 +101,15 @@ border: 1px solid transparent;
 }
 .btn:hover a{
   color: ivory;
+} */
+
+.repay-btn{
+  font-size: 12px;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  /* height:15px; */
+    /* width:50px; */
 }
 
 .tableheader{
